--- a/app/composer.json
+++ b/app/composer.json
@@ -13,7 +13,11 @@
         {
             "name": "liu21st",
             "email": "liu21st@gmail.com"
-        }
+        },
+        {
+            "name": "yunwuxin",
+            "email": "448901948@qq.com"
+        }        
     ],
     "require": {
         "php": ">=7.1.0",
